# SimpleNetwork

./: CMakeLists.txt  README.md
include/: net.hpp  net_client.hpp  net_common.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp  simple_net.hpp
src/: simple_client.cpp  simple_server.cpp
